# Muzikal

./: .replit  TESTING.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  tsconfig.json
attached_assets/: MUZIKAL_AI_INSTRUCTIONS_1774222558126.md  Muzikal_AI_Prompt_v12_1774290625133.docx  Muzikal_Build_Instructions_1774223743013.docx  Muzikal_Improvement_Plan_1774283664424.docx  Muzikal_Step7_StyleProfile_Arranger_Bridge_1774239413028.docx  Muzikal_Step8_Harmonic_Engine_1774241840822.docx  Pasted--6-1-storage-provider-py-main-py-artifacts-music-ai-b-1_1774292842144.txt  Pasted--AI-Engineering-Instructions-Fix-All-Issues-in-ai-app-b_1774212568040.txt  Pasted--FINAL-CLOSURE-DIRECTIVE-ONLY-3-REMAINING-ISSUES-You-ha_1774333459209.txt  Pasted--FINAL-DIRECTIVE-NO-MORE-CODE-GUESSING-ONLY-PROOF-You-a_1774334331003.txt  Pasted--FINAL-HARDENING-LAST-PASS-NON-NEGOTIABLE-You-have-alre_1774332367332.txt  Pasted--PROJECT-1-MUZIKAL-AI-MUSIC-ANALYSIS-ARRANGEMENT-OBJECT_1774355001378.txt  Pasted--ROLE-You-are-a-senior-AI-Audio-ML-engineer-Your-task-i_1774213213653.txt  Pasted--SYSTEM-CORRECTION-DIRECTIVE-NON-NEGOTIABLE-You-were-pr_1774331365659.txt  Pasted-1-Feature-Cache-packages-audio-core-feature-cache-py--1_1774251915155.txt  Pasted-Here-is-a-paste-ready-instruction-document-in-English-f_1774373052534.txt  Pasted-I-am-building-a-production-grade-AI-powered-music-intel_1774203380619.txt  Pasted-MASTER-BUILD-INSTRUCTIONS-FOR-OUR-AI-MUSIC-PLATFORM-Bui_1774207287395.txt  Pasted-ROLE-You-are-the-lead-architect-and-implementation-AI-f_1774215145849.txt  Pasted-S3-Storage-Integration-Step-by-Step-Instructions-The-St_1774388734993.txt  Pasted-SYSTEM-DIRECTIVE-BUILD-A-HIGH-ACCURACY-MUSIC-ANALYSIS-P_1774335329872.txt  Pasted-You-are-now-operating-in-STRICT-EXECUTION-MODE-You-are-_1774211307922.txt  Pasted-You-are-working-on-an-existing-monorepo-called-Muzikal-_1774209569162.txt  Pasted-You-are-working-on-an-existing-monorepo-called-Muzikal-_1774294073831.txt
tests/: test_api.py  test_arranger.py  test_export.py  test_ingestion.py  (+2 more)
(+239 files in other folders)
