[project]
name = "muzikal"
version = "0.1.0"
description = "Muzikal — AI Music Intelligence and Generation Studio"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.0.0",
    "celery>=5.3.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "librosa>=0.10.0",
    "mido>=1.3.0",
    "music21>=9.0.0",
    "numpy>=1.26.0",
    "openai>=1.40.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydub>=0.25.1",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.0",
    "redis>=5.0.0",
    "scipy>=1.13.0",
    "soundfile>=0.12.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
# Heavy AI/audio deps — install with: pip install -e ".[ml]"
ml = [
    "demucs>=4.0.1",
    "pedalboard>=0.9.0",
    "pretty-midi>=0.2.9",
]

[tool.pytest.ini_options]
testpaths = [
    "artifacts/music-ai-backend/tests",
    "tests",
]
pythonpath = ["artifacts/music-ai-backend"]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:librosa",
]
markers = [
    "unit: pure unit test, no I/O, no network (deselect with '-m not unit')",
    "service: tests one service/module in isolation with minimal mocking",
    "integration: tests require a running app or real I/O (may be slow)",
    "slow: tests that take > 5 s (deselect with '-m not slow')",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
